tests/ui/transmute-mut-src-not-frombytes.nightly.stderr
error[E0277]: the trait bound `Src: FromBytes` is not satisfied
  --> /usr/local/google/home/joshlf/workspace/zerocopy/ui-test/tests/ui/transmute-mut-src-not-frombytes.rs:22:38
   |
22 | const SRC_NOT_FROM_BYTES: &mut Dst = transmute_mut!(&mut Src);
   |                                      ^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `FromBytes` is not implemented for `Src`
  --> /usr/local/google/home/joshlf/workspace/zerocopy/ui-test/tests/ui/transmute-mut-src-not-frombytes.rs:15:1
   |
15 | struct Src;
   | ^^^^^^^^^^
   = note: Consider adding `#[derive(FromBytes)]` to `Src`
   = help: the following other types implement trait `FromBytes`:
             ()
             (A, B)
             (A, B, C)
             (A, B, C, D)
             (A, B, C, D, E)
             (A, B, C, D, E, F)
             (A, B, C, D, E, F, G)
             (A, B, C, D, E, F, G, H)
           and 79 others
note: required by a bound in `zerocopy::util::macro_util::Wrap::<&'a mut Src, &'a mut Dst>::transmute_mut`
  --> src/util/macro_util.rs:790:4
   = note: the full name for the type has been written to '/long-type-HASH.txt'
   = note: consider using `--verbose` to print the full type name to the console
   = note: this error originates in the macro `transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
